@@ -7,10 +7,11 @@ Changes in version 1.0 M3 (23.11.2003)
 --------------------------------------
 
 Package org.springframework.aop
-* major AOP API changes: see AOP-API-changes-M2-M3.txt for further details
+* major AOP API changes: see changes-M2-M3.txt for further details
 * added "targetClass" argument to StaticMethodPointcut.applies()
 * can force CGLIB proxying using new "proxyTargetClass" property on DefaultProxyConfig
-* CGLIB proxies support introductions now
+* CGLIB proxies support introductions
+* org.springframework.aop.interceptor.ApartmentInvokerInterceptor renamed ThreadLocalInvokerInterceptor
 
 Package org.springframework.beans
 * fixed empty-value-on-primitive-property check in BeanWrapperImpl to allow a custom editor to modify the value first
